Modifications de la structure html sur les 2 pages et modification couleur du titre de la page contact, suite à analyse de contraste

--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ a:hover {
 }
 */
 
+.tc-black {
+    color: #000;
+    font-weight: bold;
+}
+
 .b-parallax {
     background-attachment:fixed;
 }
